<resources>
    <string name="app_name">to-do</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="item">Item</string>
    <string name="item1">Item1</string>
    <string name="back">Back</string>
    <string name="delete_all">Delete All</string>
    <string name="title">Title</string>
    <string name="til_des">Please Enter Description</string>
    <string name="til_title">Please Enter Title</string>
    <string name="til_date">Date is required to Schedule</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="completed">Completed</string>
    <string name="save">Save</string>
    <string name="setdate">SetDate</string>
    <string name="cancel">Cancel</string>
    <string name="inflate_layout">Inflate_Layout</string>
    <string name="date">Date</string>
    <string name="thumbsuptask">ThumbsUpTask</string>
    <string name="h">H</string>
    <string name="change_date">Change Date</string>
    <string name="update">Update</string>
    <string name="update_toto">UPDATE</string>
</resources>