<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75sp"
        android:background="#fafafa">

        <EditText
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_style"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@+id/editText_title"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_style"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_description"
            android:layout_marginTop="10sp"
            android:elevation="11sp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <DatePicker
            android:id="@+id/datePicker_alert"
            style="@android:style/Widget.DatePicker"
            android:layout_width="wrap_content"
            android:layout_height="120sp"
            android:layout_below="@+id/textView_date"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:elevation="20dp" />

        <Button
            android:id="@+id/button_setdate"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_below="@+id/datePicker_alert"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/edittext_style"
            android:elevation="11sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/change_date"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_below="@+id/datePicker_alert"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="20sp"
            android:layout_toLeftOf="@+id/button_setdate"
            android:layout_toStartOf="@+id/button_setdate"
            android:background="@drawable/edittext_style"
            android:elevation="11sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_below="@+id/datePicker_alert"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="20sp"
            android:layout_toEndOf="@+id/button_setdate"
            android:layout_toRightOf="@+id/button_setdate"
            android:background="@drawable/edittext_style"
            android:elevation="11sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />


    </RelativeLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/update_toto"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>