<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/information_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75sp"
        android:background="#fafafa">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp">

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_des"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_title"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp">

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textview_dateshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_des"
            android:layout_marginTop="10sp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <DatePicker
            android:id="@+id/datePicker"
            style="@android:style/Widget.DatePicker"
            android:layout_width="wrap_content"
            android:layout_height="120sp"
            android:layout_below="@+id/textview_dateshow"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:layout_below="@+id/datePicker"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="20sp"
            android:layout_toLeftOf="@+id/set_date"
            android:layout_toStartOf="@+id/set_date"
            android:background="@drawable/edittext_style"
            android:elevation="10sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:layout_below="@+id/datePicker"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/edittext_style"
            android:elevation="10sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/setdate"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:layout_below="@+id/datePicker"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="20sp"
            android:layout_toEndOf="@+id/set_date"
            android:layout_toRightOf="@+id/set_date"
            android:background="@drawable/edittext_style"
            android:elevation="10sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/inflate_layout"
        android:src="@mipmap/ic_launcher" />

</RelativeLayout>