<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="15sp"
    android:layout_marginEnd="10sp"
    android:layout_marginStart="10sp"
    android:layout_marginTop="15sp"
    android:orientation="vertical"
    app:cardCornerRadius="30dp"
    app:cardElevation="10dp"
    app:layout_collapseParallaxMultiplier="1.0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp">

        <ImageView
            android:id="@+id/event_ok"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:contentDescription="@string/thumbsuptask"
            android:src="@drawable/ic_task_completed" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/event_ok"
            android:layout_toRightOf="@+id/event_ok"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/title"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_title"
            android:layout_toEndOf="@+id/event_ok"
            android:layout_toRightOf="@+id/event_ok"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/date"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_id_fin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView_good_done"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:contentDescription="@string/thumbsuptask" />

    </RelativeLayout>


</android.support.v7.widget.CardView>
